--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,15 +1,15 @@
-.content {
-  grid-area: c;
-
-}
 
 .backgroundimg {
   width: 100%;
+  display: block;
+  position: relative;
 }
 
 .profilewrapper {
   display: flex;
   justify-content: flex-start;
+  position: absolute;
+  top: 65px;
 }
 
 .profilepic {
@@ -23,6 +23,8 @@
   border: 5px solid lightgray;
   border-radius: 10px;
   padding: 0px 10px 10px 10px;
+  background: white;
+  opacity: 0.8;
 }
 
 p {
